...
    <ScrollView
      style={styles.screen}
      contentContainerStyle={styles.contentContainer}
    >
      <View style={styles.header}>
        <View>
          <Text style={styles.monthHeader}>All Time</Text>
        </View>
      </View>

      <SummaryCard
        balanceCents={balance}
        expenseCents={expenseTotal}
...
